# nm132-cli-demo

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: CICD.yml  rust.yml
src/: ec2.rs  lib.rs  main.rs  s3.rs
test/: test.txt
