[package]
name = "aws-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
aws-sdk-ec2 = "0.35.0"
tokio = { version = "1", features = ["full"] }
clap = {version="4.0.32", features=["derive"]}

[dev-dependencies]
assert_cmd = "2.0.0"
